@@ -1,6 +1,6 @@
 1000000              # total photon, use -n to overwrite in the command line
 29012392             # RNG seed, negative to generate
-30.0 30.0 1.0        # source position (in grid unit)
+29.0 29.0 0.0 1      # source position (in grid unit), the last num sets srcfrom0 (-z)
 0 0 1                # initial directional vector
 0.e+00 5.e-09 5.e-9  # time-gates(s): start, end, step
 semi60x60x60.bin     # volume ('uchar' format)
@@ -10,7 +10,7 @@ semi60x60x60.bin     # volume ('uchar' format)
 1                    # num of media
 1 0.01 0.005 1.0     # scat(1/mm), g, mua (1/mm), n
 4	1            # detector number and radius (grid)
-30.0	20.0	1.0  # detector 1 position (grid)
-30.0	40.0	1.0  # ...
-20.0	30.0	1.0
-40.0	30.0	1.0
+29.0	19.0	0.0  # detector 1 position (grid)
+29.0	39.0	0.0  # ...
+19.0	29.0	0.0
+39.0	29.0	0.0
