@@ -1,5 +1,11 @@
 = Change Log =
 
+== MCX 0.5.2 (Black Hole - update 2), FangQ <fangq nmr mgh harvard edu> ==
+
+ 2011-09-20 add verbose warnings for launch-time-out error and non-surface detectors
+ 2011-09-19 users can specify srcfrom0 (origin setting) from the input file
+ 2011-09-19 fix a bug in detector-to-volume mapping, effects all non-integer inputs
+
 == MCX 0.5.1 (Black Hole - update 1), FangQ <fangq nmr mgh harvard edu> ==
 
  2011-05-03 use the expected absorption for normalization to reduce non-atomic impact
